argocd/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abdulla-app
spec:
  replicas: 2

  selector:
    matchLabels:
      app: abdulla-app

  template:
    metadata:
      labels:
        app: abdulla-app

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - name: http
              containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
