argocd/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abdulla-app

spec:
  type: ClusterIP

  selector:
    app: abdulla-app

  ports:
    - name: http
      port: 80
      targetPort: http
